Adicionada autenticação de usuário e tela de login; implementadas funcionalidades de logout e exibição de vídeos compactados

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,12 @@
 {
   "compilerOptions": {
+    "target": "ESNext",
+    "module": "ESNext",
+    "lib": ["ES2015", "DOM"],
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "moduleResolution": "Node"
   },
   "exclude": ["node_modules", "dist"]
 }
