configurado baseURL da API para usar variáveis de ambiente e adicionado suporte para diferentes ambientes

--- a/.github/workflows/app.deploy.yml
+++ b/.github/workflows/app.deploy.yml
@@ -41,6 +41,8 @@ jobs:
     needs: sonarcloud
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
+    env:
+      VUE_APP_API_BASE_URL: ${{ secrets.VUE_APP_API_BASE_URL }}
 
     steps:
       - uses: actions/checkout@v4
