--- a/.github/workflows/app.deploy.yml
+++ b/.github/workflows/app.deploy.yml
@@ -42,7 +42,7 @@ jobs:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
     env:
-      VUE_APP_API_BASE_URL: ${{ secrets.VUE_APP_API_BASE_URL }}
+      VITE_APP_API_BASE_URL: ${{ secrets.VITE_APP_API_BASE_URL }}
 
     steps:
       - uses: actions/checkout@v4
