--- a/.github/workflows/app.deploy.yml
+++ b/.github/workflows/app.deploy.yml
@@ -1,4 +1,4 @@
-name: Frontend CI/CD
+name: Frontend Static Site Deployment
 
 on:
   push:
@@ -10,9 +10,14 @@ permissions:
   contents: read
 
 jobs:
-  sonarcloud:
-    name: SonarCloud Analysis
+  static-deploy:
+    name: Build, Analyze and Deploy Frontend
+    environment: dev
     runs-on: ubuntu-latest
+    env:
+      VITE_APP_API_BASE_URL: ${{ secrets.VITE_APP_API_BASE_URL }}
+      AZURE_STORAGE_KEY: ${{ secrets.AZURE_STORAGE_KEY }}
+
     steps:
       - uses: actions/checkout@v4
         with:
@@ -24,52 +29,42 @@ jobs:
           node-version: '20'
           cache: 'npm'
 
+      - name: Cache SonarQube packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+
       - name: Install dependencies
         run: npm ci
 
       - name: Run tests with coverage
-        run: npm run test:unit -- --coverage
+        run: npm run test:coverage
 
-      - name: SonarCloud Scan
+      - name: SonarCloud Analysis
         uses: SonarSource/sonarcloud-github-action@master
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
-  build-and-deploy:
-    name: Build and Deploy
-    needs: sonarcloud
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-    env:
-      VITE_APP_API_BASE_URL: ${{ secrets.VITE_APP_API_BASE_URL }}
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
 
       - name: Build
         run: npm run build
 
       - name: Azure Login
-        uses: azure/login@v1
+        uses: azure/login@v2
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: Deploy to Azure Static Web Apps
-        uses: Azure/static-web-apps-deploy@v1
+      - name: Upload to Azure Blob Storage
+        uses: Azure/cli@v2.2.0
         with:
-          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          action: "upload"
-          app_location: "dist"
-          output_location: ""
-          skip_app_build: true
+          inlineScript: |
+            az storage blob upload-batch \
+              --account-name storagefiapdev \
+              -d '$web' \
+              -s dist \
+              --overwrite
+        env:
+          AZURE_STORAGE_KEY: ${{ secrets.AZURE_STORAGE_KEY }}
