--- a/.github/workflows/app.deploy.yml
+++ b/.github/workflows/app.deploy.yml
@@ -36,6 +36,9 @@ jobs:
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
 
+      - name: Clean node_modules and lockfile
+        run: rm -rf node_modules package-lock.json
+
       - name: Install dependencies
         run: npm ci
 
