--- a/.github/workflows/app.deploy.yml
+++ b/.github/workflows/app.deploy.yml
@@ -36,8 +36,8 @@ jobs:
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
 
-      - name: Clean node_modules and lockfile
-        run: rm -rf node_modules package-lock.json
+      - name: Clean node_modules
+        run: rm -rf node_modules
 
       - name: Install dependencies
         run: npm ci
