Ajustado valores URLs

--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,2 @@
-VITE_APP_API_BASE_URL=https://4.203.78.63
+VITE_APP_API_BASE_URL=https://gateway-fiap-apim-dev.azure-api.net
+VITE_APP_NOTIFICATIONS_API_BASE_URL=https://4.203.78.63
