--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
   },
   "dependencies": {
     "axios": "^1.11.0",
+    "c8": "^8.0.1",
     "express": "^5.1.0",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
+    "@vitest/coverage-v8": "^3.2.4",
     "@vue/test-utils": "^2.4.6",
-    "c8": "^8.0.1",
     "jsdom": "^26.1.0",
     "vite": "^7.0.6",
     "vite-plugin-vue-devtools": "^8.0.0",
