--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.organization=hackaton-fiap
 
 # Source and test directories
 sonar.sources=src
-sonar.tests=src/__tests__
+sonar.tests=src
 
 # Test coverage configuration
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
